--- a/study/striver-A2Z/17-greedy.ipynb
+++ b/study/striver-A2Z/17-greedy.ipynb
@@ -44,7 +44,8 @@
     "import bisect\n",
     "import collections\n",
     "import itertools\n",
-    "import functools"
+    "import functools\n",
+    "import math"
    ]
   },
   {
@@ -368,6 +369,7 @@
      "iopub.status.idle": "2024-06-08T04:19:32.041304Z",
      "shell.execute_reply": "2024-06-08T04:19:32.040867Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007419,
      "end_time": "2024-06-08T04:19:32.042351",
@@ -400,6 +402,197 @@
     "assert canJumpStriver([2,3,1,1,4]) == True\n",
     "assert canJumpStriver([3,2,1,0,4]) == False\n",
     "assert canJumpStriver([2,0,2,0,0]) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d2a5ae9",
+   "metadata": {},
+   "source": [
+    "Jump Game - II: https://leetcode.com/problems/jump-game-ii/\n",
+    "Video Link: https://youtu.be/7SBVnw7GSTk?si=UDZojaM70TuG0XgY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcdd786f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def jump2Recursive(nums: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int) -> int:\n",
+    "        if i == N - 1:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            min_ = N\n",
+    "            for jump in range(nums[i]):\n",
+    "                min_ = min(min_, backtrack(i + jump + 1))\n",
+    "            return 1 + min_\n",
+    "\n",
+    "    N = len(nums)\n",
+    "    return backtrack(0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert jump2Recursive([2,3,1,1,4]) == 2\n",
+    "assert jump2Recursive([2,3,0,1,4]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b38a2b6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/jump-game-ii/submissions/1281812619/\n",
+    "def jump2Tab(nums: list[int]) -> int:\n",
+    "    # Time: O(N ** 2), Space: O(N)\n",
+    "    N = len(nums)\n",
+    "    dp: list[int] = [N if i < N - 1 else 0 for i in range(N)]\n",
+    "    for i in range(N - 2, -1, -1):\n",
+    "        for j in range(i + 1, min(N, i + 1 + nums[i])):\n",
+    "            dp[i] = min(dp[i], 1 + dp[j])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert jump2Tab([2,3,1,1,4]) == 2\n",
+    "assert jump2Tab([2,3,0,1,4]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7336f2b2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/jump-game-ii/submissions/1281839417\n",
+    "def jump2Striver(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Instead of iterating through all indices that we can jump to,\n",
+    "    we keep track of the range.\n",
+    "    For each range\n",
+    "        - Figure out the maximum idx we can jump to\n",
+    "        - jumps = jumps + 1\n",
+    "    Iterate until we reach the last index, ans would be the value of jumps variable\n",
+    "\n",
+    "    Time: O(N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "    jumps = l = r = 0\n",
+    "    while r < N - 1:\n",
+    "        farthest = 0\n",
+    "        for i in range(l, r + 1):\n",
+    "            farthest = max(farthest, i + nums[i])\n",
+    "        l, r, jumps = r + 1, farthest, jumps + 1\n",
+    "\n",
+    "    return jumps\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert jump2Striver([2,3,1,1,4]) == 2\n",
+    "assert jump2Striver([2,3,0,1,4]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b5429b",
+   "metadata": {},
+   "source": [
+    "Job sequencing Problem: https://www.geeksforgeeks.org/problems/job-sequencing-problem-1587115620/1\n",
+    "Video Link: https://youtu.be/QbwltemZbRg?si=R93V-44Jyr37Il4L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c804e410",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def jobScheduling(jobs: list[tuple[int, int, int]], N: int) -> tuple[int, int]:\n",
+    "    \"\"\"\n",
+    "    Start with the jobs with highest profit, try to push the start time as close as possible to the deadline\n",
+    "    being super lazy about it.\n",
+    "\n",
+    "    Time: O(N log N) + O(N x max deadline)\n",
+    "    Space: O(N)\n",
+    "\n",
+    "    We can optimize the inner loop (deadline -> 0) further with the use of DSU (Disjoint set union)\n",
+    "    \"\"\"\n",
+    "    jobs_start: set[int] = set()\n",
+    "    jobs_sorted: list[tuple[int, int]] = sorted(map(lambda x: (x[2], x[1]), jobs), reverse=True)\n",
+    "    job_count = total_profit = 0\n",
+    "    for profit, deadline in jobs_sorted:\n",
+    "        for start in range(deadline - 1, -1, -1):\n",
+    "            if start not in jobs_start:\n",
+    "                jobs_start.add(start)\n",
+    "                job_count, total_profit = job_count + 1, total_profit + profit\n",
+    "                break\n",
+    "\n",
+    "    return job_count, total_profit\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert jobScheduling([(1,2,100),(2,1,19),(3,2,27),(4,1,25),(5,1,15)], 5) == (2, 127)\n",
+    "assert jobScheduling([(1,4,20),(2,1,10),(3,1,40),(4,1,30)], 5) == (2, 60)\n",
+    "assert jobScheduling([(1,4,50),(2,1,50)], 2) == (2, 100)\n",
+    "assert jobScheduling([(1,4,60),(2,1,50)], 2) == (2, 110)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2835d225",
+   "metadata": {},
+   "source": [
+    "N meetings in one room: https://www.geeksforgeeks.org/problems/n-meetings-in-one-room-1587115620/1\n",
+    "Video Link: https://youtu.be/mKfhTotEguk?si=gTVT-RsSg0PR9RPP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe0aed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maximumMeetings(N: int, start: list[int], end: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Sort based on end time, we need to find meetings that finish sooner.\n",
+    "    Simply iterate through the sorted meeting in order and check if it is possible to host the meeting\n",
+    "\n",
+    "    Time: O(N log N)\n",
+    "    Space: O(N)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Sort meeting based on the end time\n",
+    "    meetings: list[tuple[int, int, int]] = [(start[i], end[i], i) for i in range(N)]\n",
+    "    meetings.sort(key=lambda x: x[1])\n",
+    "\n",
+    "    order: list[int] = []\n",
+    "    meeting_count = free_at = 0\n",
+    "    for stime, etime, idx in meetings:\n",
+    "        if stime > free_at:\n",
+    "            order.append(idx)\n",
+    "            meeting_count, free_at = meeting_count + 1, etime\n",
+    "\n",
+    "    # If needed, to return the order in which the meetings could be conducted,\n",
+    "    # we can make use of the `meeting_count` variable\n",
+    "\n",
+    "    return meeting_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumMeetings(6, [1,3,0,5,8,5], [2,4,6,7,9,9]) == 4\n",
+    "assert maximumMeetings(3, [1,4,6], [5,6,10]) == 2"
    ]
   }
  ],
