--- a/study/striver-A2Z/17-greedy.ipynb
+++ b/study/striver-A2Z/17-greedy.ipynb
@@ -652,6 +652,7 @@
      "iopub.status.idle": "2024-06-08T18:11:47.490019Z",
      "shell.execute_reply": "2024-06-08T18:11:47.489569Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009655,
      "end_time": "2024-06-08T18:11:47.491096",
@@ -667,6 +668,9 @@
     "    \"\"\"\n",
     "    Sort based on end time, we need to find meetings that finish sooner.\n",
     "    Simply iterate through the sorted meeting in order and check if it is possible to host the meeting\n",
+    "\n",
+    "    - It works because the earliest-ending meeting can't possibly cause more conflicts than any other choice\n",
+    "    - It leaves the largest amount of un-interrupted time remaining for other intervals to be chosen from\n",
     "\n",
     "    Time: O(N log N)\n",
     "    Space: O(N)\n",
@@ -691,6 +695,196 @@
     "# Testing the solution\n",
     "assert maximumMeetings(6, [1,3,0,5,8,5], [2,4,6,7,9,9]) == 4\n",
     "assert maximumMeetings(3, [1,4,6], [5,6,10]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f75f03",
+   "metadata": {},
+   "source": [
+    "Non overlapping intervals: https://leetcode.com/problems/non-overlapping-intervals/\n",
+    "Video Link: https://youtu.be/HDHQ8lAWakY?si=s1_2CwOoEBx5LSOQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7842ff87",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/non-overlapping-intervals/submissions/1282204448\n",
+    "def eraseOverlapIntervals(intervals: list[list[int]]) -> int:\n",
+    "    # Sort intervals based on start time\n",
+    "    intervals.sort(key=lambda x: (x[1], x[0]))\n",
+    "\n",
+    "    print(intervals)\n",
+    "\n",
+    "    curr_time, skip = intervals[0][0], 0\n",
+    "    for stime, etime in intervals:\n",
+    "        if curr_time <= stime:\n",
+    "            curr_time = etime\n",
+    "        else:\n",
+    "            skip += 1\n",
+    "\n",
+    "    return skip\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert eraseOverlapIntervals([[1,2],[2,3],[3,4],[1,3]]) == 1\n",
+    "assert eraseOverlapIntervals([[1,2],[1,2],[1,2]]) == 2\n",
+    "assert eraseOverlapIntervals([[1,2],[2,3]]) == 0\n",
+    "assert eraseOverlapIntervals([[-10,20],[8,12],[3,4],[5,6],[10,12],[15,20]]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4ede58d",
+   "metadata": {},
+   "source": [
+    "Insert intervals: https://leetcode.com/problems/insert-interval/description/\n",
+    "Video Link: https://youtu.be/xxRE-46OCC8?si=kKQ10RKueMFdlR-e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09c42a9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/insert-interval/submissions/1282223708/\n",
+    "def insertIntervals(intervals: list[list[int]], newInterval: list[int]) -> list[list[int]]:\n",
+    "    # Time: O(N), Space: O(N)\n",
+    "    N = len(intervals)\n",
+    "\n",
+    "    # Insert intervals here post merge\n",
+    "    merged: list[list[int]] = []\n",
+    "\n",
+    "    # Travel until we are at a pos to insert newInterval\n",
+    "    i = 0\n",
+    "    while i < N and intervals[i][0] < newInterval[0]:\n",
+    "        merged.append(intervals[i])\n",
+    "        i += 1\n",
+    "\n",
+    "    # Insert the new interval or merge it with prev interval\n",
+    "    if merged and merged[-1][1] >= newInterval[0]:\n",
+    "        merged[-1] = [merged[-1][0], max(merged[-1][1], newInterval[1])]\n",
+    "    else:\n",
+    "        merged.append(newInterval)\n",
+    "\n",
+    "    # Continue merging and then inserting until all intervals are done\n",
+    "    while i < N:\n",
+    "        if merged[-1][1] >= intervals[i][0]:\n",
+    "            merged[-1] = [merged[-1][0], max(merged[-1][1], intervals[i][1])]\n",
+    "        else:\n",
+    "            merged.append(intervals[i])\n",
+    "        i += 1\n",
+    "\n",
+    "    return merged\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert insertIntervals([[1,3],[6,9]], [2,5]) == [[1,5],[6,9]]\n",
+    "assert insertIntervals([[1,2],[3,5],[6,7],[8,10],[12,16]], [3,8]) == [[1,2],[3,10],[12,16]]\n",
+    "assert insertIntervals([[1,2],[3,5],[6,7],[8,10],[12,16]], [11,11]) == [[1,2],[3,5],[6,7],[8,10],[11,11],[12,16]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c948b4ef",
+   "metadata": {},
+   "source": [
+    "Minimum number of platforms required in a railway station: https://www.geeksforgeeks.org/problems/minimum-platforms-1587115620/1\n",
+    "Video link: https://youtu.be/AsGzwR_FWok?si=Nt5CMUPctV39JtSd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35d5bae3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimumPlatformBrute1(N: int, arr: list[int], dep: list[int]) -> int:\n",
+    "    # Time: O(N x 2400) + O(2400), Space: O(2400)\n",
+    "    platform: list[int] = [0 for i in range(2400)]\n",
+    "    for stime, etime in zip(arr, dep):\n",
+    "        for i in range(stime, etime + 1):\n",
+    "            platform[i] += 1\n",
+    "\n",
+    "    return max(platform)\n",
+    "\n",
+    "# Testing the soltution\n",
+    "assert minimumPlatformBrute1(3, [900, 1100, 1235], [1000, 1200, 1240]) == 1\n",
+    "assert minimumPlatformBrute1(3, [900, 930, 1015], [1000, 1030, 1100]) == 2\n",
+    "assert minimumPlatformBrute1(3, [900, 930, 1000], [1000, 1030, 1100]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0510feb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimumPlatformBrute2(N: int, arr: list[int], dep: list[int]) -> int:\n",
+    "    max_overlap = 0\n",
+    "    for i in range(N):\n",
+    "        overlap, istart, iend = 0, arr[i], dep[i]\n",
+    "        for j in range(i + 1, N):\n",
+    "            jstart, jend = arr[j], dep[j]\n",
+    "            if jstart <= iend:\n",
+    "                overlap += 1\n",
+    "        max_overlap = max(max_overlap, overlap)\n",
+    "\n",
+    "    return max_overlap + 1\n",
+    "\n",
+    "# Testing the soltution\n",
+    "assert minimumPlatformBrute2(3, [900, 1100, 1235], [1000, 1200, 1240]) == 1\n",
+    "assert minimumPlatformBrute2(3, [900, 930, 1015], [1000, 1030, 1100]) == 2\n",
+    "assert minimumPlatformBrute2(3, [900, 930, 1000], [1000, 1030, 1100]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f9a4262",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimumPlatform(N: int, arr: list[int], dep: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Brilliant logic from Striver:\n",
+    "        Stand and observe the station as the time passes by\n",
+    "\n",
+    "    Time: O(N log N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    # Sort the events based on time, imagine an observer standing by and watching the events unfolding\n",
+    "    arr.sort()\n",
+    "    dep.sort()\n",
+    "\n",
+    "    # Count the overlaps\n",
+    "    max_overlap = overlap = arr_idx = dep_idx = 0\n",
+    "    while arr_idx < N or dep_idx < N:\n",
+    "        if dep_idx >= N or (arr_idx < N and arr[arr_idx] <= dep[dep_idx]):\n",
+    "            overlap, arr_idx = overlap + 1, arr_idx + 1\n",
+    "        else:\n",
+    "            overlap, dep_idx = overlap - 1, dep_idx + 1\n",
+    "        max_overlap = max(max_overlap, overlap)\n",
+    "\n",
+    "    return max_overlap\n",
+    "\n",
+    "# Testing the soltution\n",
+    "assert minimumPlatform(3, [900, 1100, 1235], [1000, 1200, 1240]) == 1\n",
+    "assert minimumPlatform(3, [900, 930, 1015], [1000, 1030, 1100]) == 2\n",
+    "assert minimumPlatform(3, [900, 930, 1000], [1000, 1030, 1100]) == 3"
    ]
   }
  ],
