Striver A2Z: Greedy 4, Completed A2Z playlist!

--- a/study/striver-A2Z/17-greedy.ipynb
+++ b/study/striver-A2Z/17-greedy.ipynb
@@ -957,6 +957,7 @@
      "iopub.status.idle": "2024-06-09T03:36:12.812180Z",
      "shell.execute_reply": "2024-06-09T03:36:12.811753Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009656,
      "end_time": "2024-06-09T03:36:12.813186",
@@ -994,6 +995,361 @@
     "assert minimumPlatform(3, [900, 1100, 1235], [1000, 1200, 1240]) == 1\n",
     "assert minimumPlatform(3, [900, 930, 1015], [1000, 1030, 1100]) == 2\n",
     "assert minimumPlatform(3, [900, 930, 1000], [1000, 1030, 1100]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8141934",
+   "metadata": {},
+   "source": [
+    "Valid Parenthesis String: https://leetcode.com/problems/valid-parenthesis-string/\n",
+    "Video Link: https://youtu.be/cHT6sG_hUZI?si=7S_ZYJK-16nXDsLR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d2375c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def checkValidStringBrute(s: str) -> bool:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, brackets: int) -> bool:\n",
+    "        if brackets < 0:\n",
+    "            return False\n",
+    "        elif i == N:\n",
+    "            return brackets == 0\n",
+    "        elif s[i] == \"(\":\n",
+    "            return backtrack(i + 1, brackets + 1)\n",
+    "        elif s[i] == \")\":\n",
+    "            return backtrack(i + 1, brackets - 1)\n",
+    "        else:\n",
+    "            return backtrack(i + 1, brackets) or backtrack(i + 1, brackets - 1) or backtrack(i + 1, brackets + 1)\n",
+    "\n",
+    "    N = len(s)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "for s, result in [\n",
+    "        (\"()\", True), (\"(*)\", True), (\"(*))\", True), (\"(*()\", True), (\")*\", False),\n",
+    "        (\"(**\", True), (\"*\", True), (\"(**)()(((*))*))\", True), (\"(**(\", False)\n",
+    "    ]:\n",
+    "    assert checkValidStringBrute(s) == result, f\"failed for {s}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d04d4889",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def checkValidStringBetter(s: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Tabulating the backtracking approach to bring down log(N) portion of runtime\n",
+    "\n",
+    "    Time: O(N ** 2), Space: O(N ** 2)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N = len(s)\n",
+    "    dp: list[list[bool]] = [[True if i == N and j == 0 else False for j in range(N + 1)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(N - 1, -1, -1):\n",
+    "            if s[i] == \"(\":\n",
+    "                dp[i][j] = dp[i + 1][j + 1]\n",
+    "            elif s[i] == \")\":\n",
+    "                dp[i][j] = dp[i + 1][j - 1]\n",
+    "            else:\n",
+    "                dp[i][j] = dp[i + 1][j] or dp[i + 1][j - 1] or dp[i + 1][j + 1]\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "for s, result in [\n",
+    "        (\"()\", True), (\"(*)\", True), (\"(*))\", True), (\"(*()\", True), (\")*\", False),\n",
+    "        (\"(**\", True), (\"*\", True), (\"(**)()(((*))*))\", True), (\"(**(\", False)\n",
+    "    ]:\n",
+    "    assert checkValidStringBetter(s) == result, f\"failed for {s}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f4dbcad",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/valid-parenthesis-string/submissions/1282562888/\n",
+    "def checkValidStringSpaceOptimized(s: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    Time: O(N ** 2), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    N = len(s)\n",
+    "    dp: list[bool] = [True if j == 0 else False for j in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        prev_dp: list[bool] = list(dp)\n",
+    "        for j in range(N - 1, -1, -1):\n",
+    "            if s[i] == \"(\":\n",
+    "                dp[j] = prev_dp[j + 1]\n",
+    "            elif s[i] == \")\":\n",
+    "                dp[j] = prev_dp[j - 1]\n",
+    "            else:\n",
+    "                dp[j] = prev_dp[j] or prev_dp[j - 1] or prev_dp[j + 1]\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "for s, result in [\n",
+    "        (\"()\", True), (\"(*)\", True), (\"(*))\", True), (\"(*()\", True), (\")*\", False),\n",
+    "        (\"(**\", True), (\"*\", True), (\"(**)()(((*))*))\", True), (\"(**(\", False)\n",
+    "    ]:\n",
+    "    assert checkValidStringSpaceOptimized(s) == result, f\"failed for {s}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08fd566b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/valid-parenthesis-string/submissions/1282590335\n",
+    "def checkValidString(s: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    We still try out all possibilties, instead of carrying a count of brackets we carry\n",
+    "    a range.\n",
+    "\n",
+    "    Time: O(N), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    low = high = 0\n",
+    "    for ch in s:\n",
+    "        if ch == \"(\":\n",
+    "            low, high = low + 1, high + 1\n",
+    "        elif ch == \")\":\n",
+    "            low, high = low - 1, high - 1\n",
+    "        else:\n",
+    "            low, high = low - 1, high + 1\n",
+    "\n",
+    "        if low < 0:\n",
+    "            low = 0\n",
+    "        if high < 0:\n",
+    "            return False\n",
+    "\n",
+    "    return low == 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "for s, result in [\n",
+    "        (\"()\", True), (\"(*)\", True), (\"(*))\", True), (\"(*()\", True), (\")*\", False),\n",
+    "        (\"(**\", True), (\"*\", True), (\"(**)()(((*))*))\", True), (\"(**(\", False)\n",
+    "    ]:\n",
+    "    assert checkValidString(s) == result, f\"failed for {s}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79e48339",
+   "metadata": {},
+   "source": [
+    "Fractional Knapsack: https://www.geeksforgeeks.org/problems/fractional-knapsack-1587115620/1\n",
+    "Video Link: https://youtu.be/1ibsQrnuEEg?si=nTPVv4QkGEXUTndS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df6e8d1f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def fractionalknapsack(capacity: int, values: list[float], weights: list[int], N: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Time: O(N log N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    # We use the unit rate to pick the best possible item to pick\n",
+    "    rates: list[tuple[float, int]] = []\n",
+    "    for i in range(N):\n",
+    "        rates.append((values[i] / weights[i], weights[i]))\n",
+    "    rates.sort(reverse=True)\n",
+    "\n",
+    "    # Greedily fill in as much as possible\n",
+    "    total = 0.\n",
+    "    idx = 0\n",
+    "    while idx < N:\n",
+    "        units = min(capacity, rates[idx][1])\n",
+    "        total += rates[idx][0] * units\n",
+    "        capacity -= units\n",
+    "        idx += 1\n",
+    "        if capacity == 0:\n",
+    "            break\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert fractionalknapsack(50, [60,100,120], [10,20,30], 3) == 240.\n",
+    "assert fractionalknapsack(50, [60,100], [10,20], 2) == 160."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13750c04",
+   "metadata": {},
+   "source": [
+    "Candy: https://leetcode.com/problems/candy/\n",
+    "Video link: https://youtu.be/IIqVFvKE6RY?si=tMFSEL4aw1g2VSc5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bee261e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def candy(ratings: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Start with kids having lowest ratings. Assign them 1 candy and try to move left/right.\n",
+    "\n",
+    "    If neighbouring kid has a higher rating, we need to give them atleast 1 candy more than what current kid has.\n",
+    "    If neighbouring kid has a lower rating, we could assign them the lowest possible as long as they are isolated* (check if they are untouched previously)\n",
+    "\n",
+    "    Time: O(N log N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    N, min_rating = len(ratings), min(ratings)\n",
+    "    candies: list[int] = [-1 for i in range(N)]\n",
+    "    heap: list[tuple[int, int]] = []\n",
+    "    for i in range(N):\n",
+    "        if ratings[i] == min_rating:\n",
+    "            heap.append((1, i))\n",
+    "\n",
+    "    while heap:\n",
+    "        count, idx = heapq.heappop(heap)\n",
+    "        candies[idx] = count\n",
+    "\n",
+    "        if idx - 1 >= 0:\n",
+    "            # Neighbour has better rating and lower number of candies, update ->\n",
+    "            if ratings[idx - 1] > ratings[idx] and candies[idx - 1] <= candies[idx]:\n",
+    "                heapq.heappush(heap, (count + 1, idx - 1))\n",
+    "\n",
+    "            # Try to sneakily assign the lowest possible candy, if they are isolated (untouched previously)\n",
+    "            elif candies[idx - 1] == -1:\n",
+    "                heapq.heappush(heap, (1, idx - 1))\n",
+    "\n",
+    "        if idx + 1 < N:\n",
+    "            # Neighbour has better rating and lower number of candies, update ->\n",
+    "            if ratings[idx + 1] > ratings[idx] and candies[idx + 1] <= candies[idx]:\n",
+    "                heapq.heappush(heap, (count + 1, idx + 1))\n",
+    "\n",
+    "            # Try to sneakily assign the lowest possible candy, if they are isolated (untouched previously)\n",
+    "            elif candies[idx + 1] == -1:\n",
+    "                heapq.heappush(heap, (1, idx + 1))\n",
+    "\n",
+    "    return sum(candies)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert candy([1,0,2]) == 5\n",
+    "assert candy([1,2,2]) == 4\n",
+    "assert candy([3,2,1]) == 6\n",
+    "assert candy([1,3,4,5,2]) == 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6955d618",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/candy/submissions/1282748617\n",
+    "def candyStriverBrute(ratings: list[int]) -> int:\n",
+    "    # Time: O(N), Space: O(N)\n",
+    "    N = len(ratings)\n",
+    "\n",
+    "    # Solve worrying only about the left neighbours\n",
+    "    left: list[int] = []\n",
+    "    for i in range(N):\n",
+    "        if i == 0 or ratings[i] <= ratings[i - 1]:\n",
+    "            left.append(1)\n",
+    "        else:\n",
+    "            left.append(left[-1] + 1)\n",
+    "\n",
+    "    # Solve worrying only about the right neighbours\n",
+    "    right: list[int] = []\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        if i == N - 1 or ratings[i] <= ratings[i + 1]:\n",
+    "            right.append(1)\n",
+    "        else:\n",
+    "            right.append(right[-1] + 1)\n",
+    "    right.reverse()\n",
+    "\n",
+    "    # The candies assigned must satisfy both left and right, hence max\n",
+    "    total = 0\n",
+    "    for i in range(N):\n",
+    "        total += max(left[i], right[i])\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert candyStriverBrute([1,0,2]) == 5\n",
+    "assert candyStriverBrute([1,2,2]) == 4\n",
+    "assert candyStriverBrute([3,2,1]) == 6\n",
+    "assert candyStriverBrute([1,3,4,5,2]) == 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf809a5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/candy/submissions/1282800027/\n",
+    "def candyStriver(ratings: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Won't be able to think this solution on our own, need some prior insights\n",
+    "    Visualize ratings in terms of slope - peaks and troughs\n",
+    "\n",
+    "    Code shamelessly copied from Striver's logic :O\n",
+    "    \"\"\"\n",
+    "    N = len(ratings)\n",
+    "    total = i = 1\n",
+    "    while i < N:\n",
+    "        if i == 0 or ratings[i] == ratings[i - 1]:\n",
+    "            total, i = total + 1, i + 1\n",
+    "        else:\n",
+    "            peak = 1\n",
+    "            while i < N and ratings[i] > ratings[i - 1]:\n",
+    "                peak += 1\n",
+    "                total, i = total + peak, i + 1\n",
+    "\n",
+    "            down = 1\n",
+    "            while i < N and ratings[i] < ratings[i - 1]:\n",
+    "                total += down\n",
+    "                down, i = down + 1, i + 1\n",
+    "\n",
+    "            if down > peak:\n",
+    "                total += down - peak\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert candyStriver([1,0,2]) == 5\n",
+    "assert candyStriver([1,2,2]) == 4\n",
+    "assert candyStriver([3,2,1]) == 6\n",
+    "assert candyStriver([1,3,4,5,2]) == 11"
    ]
   }
  ],
