LC VC - 10th June 2024 - Warmup Contest

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -1022,6 +1022,7 @@
      "iopub.status.idle": "2024-06-02T17:58:16.561061Z",
      "shell.execute_reply": "2024-06-02T17:58:16.560610Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010328,
      "end_time": "2024-06-02T17:58:16.562125",
@@ -1060,6 +1061,208 @@
     "assert countPrimes(10) == 4\n",
     "assert countPrimes(0) == countPrimes(1) == 0\n",
     "assert countPrimes(100) == 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03bf3eee",
+   "metadata": {},
+   "source": [
+    "Heights checker - Easy\n",
+    "https://leetcode.com/problems/height-checker/submissions/1283296449/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f073c27",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def heightChecker(heights: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Implement count sort\n",
+    "    Time: O(N), Space: O(N)\n",
+    "\n",
+    "    1. Bucketize and count the heights\n",
+    "    2. Kind of like a two pointer approach, iterate through both. Bucketized dict is iterate in order of natural numbers O(100 * individual freq) ~ O(N)\n",
+    "    3. This solution is O(N) only because we have a natural limit to max height - 100\n",
+    "    \"\"\"\n",
+    "    freq = collections.Counter(heights)\n",
+    "\n",
+    "    result = currHeight = 0\n",
+    "    for height in heights:\n",
+    "\n",
+    "        while currHeight not in freq or freq[currHeight] == 0: \n",
+    "            currHeight += 1\n",
+    "\n",
+    "        if currHeight != height:\n",
+    "            result += 1\n",
+    "\n",
+    "        # Whether matching or not matching, one of student's\n",
+    "        # heights were compared, so continue travesing\n",
+    "        freq[currHeight] -= 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert heightChecker([1,1,4,2,1,3]) == 3\n",
+    "assert heightChecker([5,1,2,3,4]) == 5\n",
+    "assert heightChecker([1,2,3,4,5]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d13e69e3",
+   "metadata": {},
+   "source": [
+    "LC Virtual - 1: Warmup contest\n",
+    "https://leetcode.com/contest/warm-up-contest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c4f1888",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Lexicographical numbers\n",
+    "def lexicalOrderRecursive(n: int) -> list[int]:\n",
+    "    result: list[int] = []\n",
+    "    def backtrack(curr: int) -> None:\n",
+    "        result.append(curr)\n",
+    "        if curr * 10 <= n:\n",
+    "            backtrack(curr * 10)\n",
+    "        if (curr % 10) < 9 and curr < n:\n",
+    "            backtrack(curr + 1)\n",
+    "\n",
+    "    backtrack(1)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "lexicalOrderRecursive(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc44841b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def lexicalOrder(n: int) -> list[int]:\n",
+    "    result: list[int] = []\n",
+    "    stack: list[int] = [1]\n",
+    "    while stack:\n",
+    "        curr = stack.pop()\n",
+    "        result.append(curr)\n",
+    "        if (curr % 10) < 9 and curr < n:\n",
+    "            stack.append(curr + 1)\n",
+    "        if curr * 10 <= n:\n",
+    "            stack.append(curr * 10)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "lexicalOrder(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d276fa81",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2: First unique character in a string\n",
+    "def firstUniqChar(s: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Iterate from right to left. Keep track of elements already visited.\n",
+    "    If new char is encountered update result.\n",
+    "    Else (char already exists), ensure that result prev found\n",
+    "    \"\"\"\n",
+    "    N = len(s)\n",
+    "    freq = collections.Counter(s)\n",
+    "    for i in range(N):\n",
+    "        if freq[s[i]] == 1:\n",
+    "            return i\n",
+    "    return -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert firstUniqChar(\"leetcode\") == 0\n",
+    "assert firstUniqChar(\"loveleetcode\") == 2\n",
+    "assert firstUniqChar(\"aabb\") == -1\n",
+    "assert firstUniqChar(\"aab\") == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18fdc0db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3: Longest Absolute File Path\n",
+    "def lengthLongestPath(abstracted: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Iterate through path character by character.\n",
+    "    \"\\n\" demarcates the structure.\n",
+    "    \"\\t\" tells us about the depth\n",
+    "\n",
+    "    If curr_depth is > prev_depth, nest inside previous.\n",
+    "    If curr_depth <= prev_depth, remove previously added levels and add curr. Levels to remove: prev_depth - curr_depth + 1\n",
+    "    \"\"\"\n",
+    "\n",
+    "    path: list[str] = []\n",
+    "    N, i = len(abstracted), 0\n",
+    "    max_length, depth = 0, 0\n",
+    "    is_file = False\n",
+    "    while i < N:\n",
+    "        if abstracted[i] == \"\\n\":\n",
+    "            # Check if current absolute path is a file, if yes update max_length\n",
+    "            if is_file:\n",
+    "                max_length = max(max_length, len(path))\n",
+    "\n",
+    "            i, prev_depth, depth = i + 1, depth, 0\n",
+    "            while abstracted[i] == \"\\t\":\n",
+    "                i, depth = i + 1, depth + 1\n",
+    "\n",
+    "            # Remove nested structure if curr_depth <= prev_depth\n",
+    "            if depth <= prev_depth:\n",
+    "                extra_depth = prev_depth - depth + 1\n",
+    "                while path and extra_depth:\n",
+    "                    removed = path.pop()\n",
+    "                    if removed == \"/\":\n",
+    "                        extra_depth -= 1\n",
+    "\n",
+    "            # Reset values for upcoming cycle\n",
+    "            if depth > 0:\n",
+    "                path.append(\"/\")\n",
+    "            is_file = False\n",
+    "\n",
+    "        else:\n",
+    "            if abstracted[i] == '.':\n",
+    "                is_file = True\n",
+    "            path.append(abstracted[i])\n",
+    "            i += 1\n",
+    "\n",
+    "    return max(max_length, len(path) if is_file else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert lengthLongestPath(\"dir\\n\\tsubdir1\\n\\t\\tfile1.ext\\n\\t\\tsubsubdir1\\n\\tsubdir2\\n\\t\\tsubsubdir2\\n\\t\\t\\tfile2.ext\") == 32\n",
+    "assert lengthLongestPath(\"dir\\n\\tsubdir1\\n\\tsubdir2\\n\\t\\tfile.ext\") == 20\n",
+    "assert lengthLongestPath(\"file1.txt\\nfile2.txt\\nlongfile.txt\") == 12\n",
+    "assert lengthLongestPath(\"dir1\\ndir2\\n\\tsubdir1\\n\\tsubdir2\\n\\t\\tfile.ext\") == 21\n",
+    "assert lengthLongestPath(\"dir0\\n\\tabcdefghijklmnopqrstuvw.file\") == 33"
    ]
   }
  ],
